// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering Highlights the next item on right-arrow press 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                         ╭────────────────╮    ╭─────────────╮    ╭──────╮                        │
│                         │ [47m[30mStart New Game[39m[49m │    │ How to Play │    │ Quit │                        │
│                         ╰────────────────╯    ╰─────────────╯    ╰──────╯                        │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Button rendering Renders correctly in the default state 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                         ╭────────────────╮    ╭─────────────╮    [31m╭──────╮[39m                        │
│                         │ [7mStart New Game[27m │    │ How to Play │    [31m│[39m [31mQuit[39m [31m│[39m                        │
│                         ╰────────────────╯    ╰─────────────╯    [31m╰──────╯[39m                        │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
